# k3-mcp-toolbox-public

./: README.md
.jules/: bolt.md
antigravity-logicware/: CONTRIBUTING.md  DEEP_RESEARCH_COSCIENTIST.md  README.md  context.md  k3_mrl_indexer.py  pyproject.toml  sequential_thinking.py  tournament_logic.py
antigravity-logicware/src/antigravity/: __init__.py  federated_bloom.py  k3_mrl_indexer.py
docker-examples/: README.md  docker-compose.yml
k3-mcp-toolbox/: CONTRIBUTING.md  README.md  REDDIT_POST.md  bridge.py  context.md  devtools_adapter.py  dynamic_mcp_client.py  mcp_config_recommended.json  requirements.txt  server.py  test_mcp_health.py
k3-mcp-toolbox/src/: k3_mrl_indexer.py  kill_zombies.ps1
win-agent-ops/: kill_zombies.ps1  system_ops_check.py
